--- a/app/src/main/res/layout/activity_sign_up_doctor.xml
+++ b/app/src/main/res/layout/activity_sign_up_doctor.xml
@@ -55,9 +55,9 @@
                     app:counterMaxLength="20">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/etName"
                         android:inputType="textPersonName" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -72,9 +72,9 @@
                     app:counterMaxLength="10">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/etPhone"
                         android:inputType="phone" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -88,8 +88,8 @@
                     android:hint="البريد الالكتروني">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
                         android:id="@+id/etEmail"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -103,8 +103,8 @@
                     app:endIconMode="password_toggle">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
                         android:id="@+id/etPassword"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword" />
 
@@ -120,12 +120,13 @@
                     app:counterMaxLength="10">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
                         android:id="@+id/etSSN"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -135,8 +136,8 @@
                     app:counterMaxLength="10">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
                         android:id="@+id/etSpecialization"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number" />
 
@@ -163,6 +164,7 @@
                         android:text="اختيار الجنس" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
@@ -192,46 +194,43 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:onClick="pickImage"
-                    android:text="اضافة صورة عن شهادة مزاولة المهنة موثقة من وزارة الصحة الاردنية"
-                    />
+                    android:text="اضافة صورة عن شهادة مزاولة المهنة موثقة من وزارة الصحة الاردنية" />
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/img_license_image"
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:layout_marginStart="16dp"
                     android:layout_marginVertical="16dp"
+                    android:layout_marginStart="16dp"
                     android:onClick="pickImage"
-                    app:riv_corner_radius="10dp"
                     android:scaleType="centerCrop"
+                    android:src="@drawable/image_upload_bro"
 
                     app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView23"
-                    android:src="@drawable/image_upload_bro" />
+                    app:riv_corner_radius="10dp" />
 
 
-
-<View
-    android:layout_width="match_parent"
-    android:layout_height="50dp"/>
-
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp" />
 
 
             </LinearLayout>
         </ScrollView>
 
     </androidx.cardview.widget.CardView>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintEnd_toStartOf="parent">
 
         <Button
             android:id="@+id/button5"
@@ -252,17 +251,15 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
-            android:background="@drawable/blue_button_background"
-            android:text="التالي"
-            android:onClick="toOTP"
             android:layout_weight="1"
+            android:background="@drawable/blue_button_background"
+            android:onClick="toOTP"
+            android:text="التالي"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </LinearLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
